Fixed image overflow. Finished mobile and desktop designs, however project is not responsive.

--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,10 @@ footer {
     background-color: hsl(0, 0%, 100%);
   }
   /* Main */
+  main {
+    overflow-x: hidden;
+  }
+
   #main-header-wrapper {
     background: linear-gradient(.25turn, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
   }
@@ -415,7 +419,6 @@ footer {
     grid-template-rows: min-content 1fr 1fr;
     grid-template-columns: repeat(2, 1fr);
     position: relative;
-    overflow: hidden;
   }
 
   .main-info-container > h2 {
@@ -429,7 +432,7 @@ footer {
     grid-row: 2 / 4;
     grid-column: 2 / 3;
     position: absolute;
-    right: -33%;
+    right: -31%;
     top: -30%;
   }
 
